Attempt to fix alignment for 500 kV tile

--- a/ept-cep/css/design-styles.css
+++ b/ept-cep/css/design-styles.css
@@ -54,4 +54,5 @@ footer {
   right: 0;
   left: 0;
   font-size: 18px;
+  opacity: 1 !important;
 }
